--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ nav {
     position: sticky; top: 0;
 }
 
+section {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    font-size: 50px;
+    font-weight: bold;
+    background: #eee;
+  }
+
 .homerow {
     width: 100%;
     display: grid;
