--- a/style.css
+++ b/style.css
@@ -76,3 +76,11 @@ footer {
     position: sticky;
     bottom: 0;
 }
+
+footer p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+    background: #fff;
+  }
