--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav {
 }
 
   body {
-    min-height: 100vh;
+    min-height: 100svh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -73,12 +73,12 @@ nav {
   }
 
   footer {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
-    font-size: 25px;
+    font-size: 12px;
     font-weight: bold;
     background: #fff;
-    color: #da2;
+    color: rgb(34, 221, 181);
     position: sticky;
     bottom: 0;
     text-align: center;
