--- a/style.css
+++ b/style.css
@@ -73,12 +73,13 @@ nav {
   }
 
   footer {
-    padding: 5px;
-    font-size: 12px;
+    padding: 0.5svh;
+    font-size: 2svh;
     font-weight: bold;
     background: #fff;
     color: rgb(34, 221, 181);
     position: sticky;
     bottom: 0;
     text-align: center;
+    height: 4svh;
   }
