--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav {
 }
 
   body {
-    min-height: 100svh;
+    min-height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -64,7 +64,7 @@ nav {
     color: #1ac;
   }
   section {
-    height: 100svh;
+    height: 100vh;
     display: grid;
     place-items: center;
     font-size: 50px;
