--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ html {
   body footer {
     padding: 3svh;
     text-align: center;
-    font-size: 2svh;
+    font-size: 15px;
     font-weight: bold;
     background: #fff;
     color: rgb(53, 201, 201);
