--- a/landing.css
+++ b/landing.css
@@ -87,30 +87,58 @@ body {
 }
 
 #wrapper > .shape:nth-child(1) {
+    left: 0%;
+    top: 0%;
+    height: 50%;
+    width: 20%;
     background-color: #FFA69E;
     z-index: 2;
 }
 #wrapper > .shape:nth-child(2) {
+    left: 20%;
+    top: 0%;
+    height: 50%;
+    width: 30%;
     background-color: #FAF3DD;
     z-index: 2;
 }
 #wrapper > .shape:nth-child(3) {
+    left: 50%;
+    top: 0%;
+    height: 100%;
+    width: 50%;
     background-color: #B8F2E6;
     z-index: 1;
 }
 #wrapper > .shape:nth-child(4) {
+    left: 0%;
+    top: 50%;
+    height: 50%;
+    width: 30%;
     background-color: #AED9E0;
     z-index: 2;
 }
 #wrapper > .shape:nth-child(5) {
+    left: 30%;
+    top: 50%;
+    height: 50%;
+    width: 20%;
     background-color: #5E6472;
     z-index: 2;
 }
 #wrapper > .shape:nth-child(6) {
+    left: 70%;
+    top: 50%;
+    height: 50%;
+    width: 30%;
     background-color: #9297c4;
     z-index: 2;
 }
 #wrapper > .shape:nth-child(7) {
+    left: 85%;
+    top: 75%;
+    height: 25%;
+    width: 15%;
     background-color: #f79256;
     z-index: 2;
 }
