--- a/landing.css
+++ b/landing.css
@@ -1,387 +1,402 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-    --pink-rgb: 255 192 203;
-    --blue-rgb: 135 206 235;
-    --colA: rgb(#FFA69E);
-    --colB: rgb(#FAF3DD);
-    --colC: rgb(#B8F2E6);
-    --colD: rgb(#AED9E0);
-    --colE: rgb(#5E6472);
-    --colF: rgb(#9297c4);
-    --colG: rgb(#f79256);
+  --pink-rgb: 255 192 203;
+  --blue-rgb: 135 206 235;
+  --colA: rgb(#FFA69E);
+  --colB: rgb(#FAF3DD);
+  --colC: rgb(#B8F2E6);
+  --colD: rgb(#AED9E0);
+  --colE: rgb(#5E6472);
+  --colF: rgb(#9297c4);
+  --colG: rgb(#f79256);
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    place-items: center;
-    background-color: black;
-    margin: 0px;
-    overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+  background-color: black;
+  margin: 0px;
+  overflow: hidden;
 }
 
 #wrapperOut {
-  aspect-ratio: 1.618;
-  width: 100vmin;
-  position: absolute;
+aspect-ratio: 1.618;
+width: 100vmin;
+position: absolute;
 }
 
 #wrapperOut > .shapeOut {
-  position: absolute;
-  background-color: rgb(255, 255, 255);
-  transition: top, left, height, width;
-  transition-duration: 750ms;
-  transition-timing-function: linear;
-}
-
-#wrapperOut > .shapeOut:nth-child(1) {
-  left: 89.5%;
-  top: 95%;
-  width: 3%;
-  height: 3%;
-}
-
-#wrapperOut > .shapeOut:nth-child(2) {
-  left: 92.5%;
-  top: 5%;
-  height: 3%;
-  width: 3%;
-}
-
-#wrapperOut[data-config="1"] > .shapeOut:nth-child(1) {
-  left: 7.5%;
-  top: 95%;
-}
-#wrapperOut[data-config="2"] > .shapeOut:nth-child(1) {
-  left: 89.5%;
-  top: 95%;
-}
-
-#wrapperOut[data-config="1"] > .shapeOut:nth-child(2) {
-  left: 92.5%;
-  top: 95%;
-}
-#wrapperOut[data-config="2"] > .shapeOut:nth-child(2) {
-  left: 92.5%;
-  top: 5%;
-}
-
-#wrapper {
-    aspect-ratio: 1.618;
-    width: 85vmin;
-    position: absolute;
-}
-
-#wrapper > .shape {
-    position: absolute;
-    width: 30%;
-    height: 30%;
-    background-color: rgb(255 255 255 / 5%);
-    transition: top, left, height, width, border-radius;
-    transition-duration: 700ms;
-    transition-timing-function: ease-in-out;
+position: absolute;
+background-color: rgb(255, 255, 255);
+transition: top, left, height, width;
+transition-duration: 750ms;
+transition-timing-function: linear;
 }
 
 #wrapper > .shape:nth-child(1) {
-    left: 0%;
-    top: 0%;
-    height: 50%;
-    width: 20%;
-    background-color: #FFA69E;
-    z-index: 2;
+left: 0%;
+top: 0%;
+height: 50%;
+width: 20%;
+background-color: #FFA69E;
+z-index: 2;
 }
 #wrapper > .shape:nth-child(2) {
-    left: 20%;
-    top: 0%;
-    height: 50%;
-    width: 30%;
-    background-color: #FAF3DD;
-    z-index: 2;
+left: 20%;
+top: 0%;
+height: 50%;
+width: 30%;
+background-color: #FAF3DD;
+z-index: 2;
 }
 #wrapper > .shape:nth-child(3) {
-    left: 50%;
-    top: 0%;
-    height: 100%;
-    width: 50%;
-    background-color: #B8F2E6;
-    z-index: 1;
+left: 50%;
+top: 0%;
+height: 100%;
+width: 50%;
+background-color: #B8F2E6;
+z-index: 1;
 }
 #wrapper > .shape:nth-child(4) {
-    left: 0%;
-    top: 50%;
-    height: 50%;
-    width: 30%;
-    background-color: #AED9E0;
-    z-index: 2;
+left: 0%;
+top: 50%;
+height: 50%;
+width: 30%;
+background-color: #AED9E0;
+z-index: 2;
 }
 #wrapper > .shape:nth-child(5) {
-    left: 30%;
-    top: 50%;
-    height: 50%;
-    width: 20%;
-    background-color: #5E6472;
-    z-index: 2;
+left: 30%;
+top: 50%;
+height: 50%;
+width: 20%;
+background-color: #5E6472;
+z-index: 2;
 }
 #wrapper > .shape:nth-child(6) {
-    left: 70%;
-    top: 50%;
-    height: 50%;
-    width: 30%;
-    background-color: #9297c4;
-    z-index: 2;
+left: 70%;
+top: 50%;
+height: 50%;
+width: 30%;
+background-color: #9297c4;
+z-index: 2;
 }
 #wrapper > .shape:nth-child(7) {
-    left: 85%;
-    top: 75%;
-    height: 25%;
-    width: 15%;
-    background-color: #f79256;
-    z-index: 2;
+left: 85%;
+top: 75%;
+height: 25%;
+width: 15%;
+background-color: #f79256;
+z-index: 2;
+}
+
+#wrapperOut[data-config="1"] > .shapeOut:nth-child(1) {
+left: 7.5%;
+top: 95%;
+}
+#wrapperOut[data-config="2"] > .shapeOut:nth-child(1) {
+left: 89.5%;
+top: 95%;
+}
+
+#wrapperOut[data-config="1"] > .shapeOut:nth-child(2) {
+left: 92.5%;
+top: 95%;
+}
+#wrapperOut[data-config="2"] > .shapeOut:nth-child(2) {
+left: 92.5%;
+top: 5%;
+}
+
+#wrapper {
+  aspect-ratio: 1.618;
+  width: 85vmin;
+  position: absolute;
+}
+
+#wrapper > .shape {
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  background-color: rgb(255 255 255 / 5%);
+  transition: top, left, height, width, border-radius;
+  transition-duration: 700ms;
+  transition-timing-function: ease-in-out;
+}
+
+#wrapper > .shape:hover {
+  cursor: pointer;
+}
+
+#wrapper > .shape > .shape-content {
+visibility: hidden;
+opacity: 0;
+transition: visibility 1.25s, opacity 0.5s linear;
+overflow: hidden;
+border-radius: inherit;
+top: inherit;
+left: inherit;
+height: 100%;
+width: 100%;
+object-fit: fill;
+}
+  
+#wrapper > .shape:hover > .shape-content {
+visibility: visible;
+opacity: 1;
+}
+
+
+#wrapper > .shape > .shape-content > .shape-content-img {
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
 #wrapper[data-config="1"] > .shape:nth-child(1) {
-    left: 0%;
-    top: 0%;
-    height: 50%;
-    width: 20%;
+  left: 0%;
+  top: 0%;
+  height: 50%;
+  width: 20%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(2) {
-    left: 20%;
-    top: 0%;
-    height: 50%;
-    width: 30%;
+  left: 20%;
+  top: 0%;
+  height: 50%;
+  width: 30%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(3) {
-    left: 50%;
-    top: 0%;
-    height: 100%;
-    width: 50%;
+  left: 50%;
+  top: 0%;
+  height: 100%;
+  width: 50%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(4) {
-    left: 0%;
-    top: 50%;
-    height: 50%;
-    width: 30%;
+  left: 0%;
+  top: 50%;
+  height: 50%;
+  width: 30%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(5) {
-    left: 30%;
-    top: 50%;
-    height: 50%;
-    width: 20%;
+  left: 30%;
+  top: 50%;
+  height: 50%;
+  width: 20%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(6) {
-    left: 70%;
-    top: 50%;
-    height: 50%;
-    width: 30%;
+  left: 70%;
+  top: 50%;
+  height: 50%;
+  width: 30%;
 }
 #wrapper[data-config="1"] > .shape:nth-child(7) {
-    left: 85%;
-    top: 75%;
-    height: 25%;
-    width: 15%;
+  left: 85%;
+  top: 75%;
+  height: 25%;
+  width: 15%;
 }
 
 #wrapper[data-config="2"] > .shape:nth-child(1) {
-    left: 25%;
-    top: 20%;
-    height: 80%;
-    width: 15%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(2) {  
-    left: 40%;
-    top: 20%;
-    height: 50%;
-    width: 10%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(3) {  
-    left: 50%;
-    top: 0%;
-    height: 100%;
-    width: 25%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(4) {  
-    left: 0%;
-    top: 0%;
-    height: 50%;
-    width: 10%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(5) {  
-    left: 10%;
-    top: 0%;
-    height: 70%;
-    width: 15%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(6) {  
-    left: 75%;
-    top: 10%;
-    height: 80%;
-    width: 15%;
-  }
-  
-  #wrapper[data-config="2"] > .shape:nth-child(7) {  
-    left: 90%;
-    top: 40%;
-    height: 60%;
-    width: 10%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(1) {
-    left: 0%;
-    top: 16.5%;
-    height: 32%;
-    width: 20%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(2) {  
-    left: 20%;
-    top: 2.7%;
-    height: 55%;
-    width: 34%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(3) {  
-    left: 38%;
-    top: 0%;
-    height: 100%;
-    width: 62%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(4) {  
-    left: 0%;
-    top: 47.3%;
-    height: 55%;
-    width: 34%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(5) {   
-    left: 34%;
-    top: 56.4%;
-    height: 32%;
-    width: 20%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(6) {  
-    left: 66%;
-    top: 45%;
-    height: 55%;
-    width: 34%;
-  }
-  
-  #wrapper[data-config="3"] > .shape:nth-child(7) {  
-    left: 80%;
-    top: 68%;
-    height: 32%;
-    width: 20%;
-  }
-  
-  #wrapper[data-roundness="1"] > .shape {
-    border-radius: 6rem;
-  }
-  
-  #wrapper[data-roundness="2"] > .shape {  
-    border-radius: 0rem;
-  }
-  
-  #wrapper[data-roundness="3"] > .shape {  
-    border-radius: 30rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(1) {  
-    border-bottom-left-radius: 10rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(2) {  
-    border-radius: 20rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(3) {  
-    border-top-right-radius: 12rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(4) {  
-    border-top-right-radius: 10rem;
-    border-bottom-right-radius: 10rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(5) {  
-    border-bottom-left-radius: 10rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(6) {  
-    border-top-left-radius: 16rem;
-  }
-  
-  #wrapper[data-roundness="4"] > .shape:nth-child(7) {  
-    border-top-left-radius: 10rem;
-  }
+  left: 25%;
+  top: 20%;
+  height: 80%;
+  width: 15%;
+}
 
-  /* -- YouTube Link Styles -- */
+#wrapper[data-config="2"] > .shape:nth-child(2) {  
+  left: 40%;
+  top: 20%;
+  height: 50%;
+  width: 10%;
+}
+
+#wrapper[data-config="2"] > .shape:nth-child(3) {  
+  left: 50%;
+  top: 0%;
+  height: 100%;
+  width: 25%;
+}
+
+#wrapper[data-config="2"] > .shape:nth-child(4) {  
+  left: 0%;
+  top: 0%;
+  height: 50%;
+  width: 10%;
+}
+
+#wrapper[data-config="2"] > .shape:nth-child(5) {  
+  left: 10%;
+  top: 0%;
+  height: 70%;
+  width: 15%;
+}
+
+#wrapper[data-config="2"] > .shape:nth-child(6) {  
+  left: 75%;
+  top: 10%;
+  height: 80%;
+  width: 15%;
+}
+
+#wrapper[data-config="2"] > .shape:nth-child(7) {  
+  left: 90%;
+  top: 40%;
+  height: 60%;
+  width: 10%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(1) {
+  left: 0%;
+  top: 16.5%;
+  height: 32%;
+  width: 20%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(2) {  
+  left: 20%;
+  top: 2.7%;
+  height: 55%;
+  width: 34%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(3) {  
+  left: 38%;
+  top: 0%;
+  height: 100%;
+  width: 62%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(4) {  
+  left: 0%;
+  top: 47.3%;
+  height: 55%;
+  width: 34%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(5) {   
+  left: 34%;
+  top: 56.4%;
+  height: 32%;
+  width: 20%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(6) {  
+  left: 66%;
+  top: 45%;
+  height: 55%;
+  width: 34%;
+}
+
+#wrapper[data-config="3"] > .shape:nth-child(7) {  
+  left: 80%;
+  top: 68%;
+  height: 32%;
+  width: 20%;
+}
+
+#wrapper[data-roundness="1"] > .shape {
+  border-radius: 6rem;
+}
+
+#wrapper[data-roundness="2"] > .shape {  
+  border-radius: 0rem;
+}
+
+#wrapper[data-roundness="3"] > .shape {  
+  border-radius: 30rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(1) {  
+  border-bottom-left-radius: 10rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(2) {  
+  border-radius: 20rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(3) {  
+  border-top-right-radius: 12rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(4) {  
+  border-top-right-radius: 10rem;
+  border-bottom-right-radius: 10rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(5) {  
+  border-bottom-left-radius: 10rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(6) {  
+  border-top-left-radius: 16rem;
+}
+
+#wrapper[data-roundness="4"] > .shape:nth-child(7) {  
+  border-top-left-radius: 10rem;
+}
+
+/* -- YouTube Link Styles -- */
 
 body.menu-toggled > .meta-link > span {
-    color: rgb(30, 30, 30);
-  }
-  
-  #source-link {
-    bottom: 60px;
-  }
+  color: rgb(30, 30, 30);
+}
 
-  #return-link {
-    bottom: 110px;
-  }
+#source-link {
+  bottom: 60px;
+}
 
-  #return-link > i {
-    color: rgb(94, 106, 210);
-  }
-  
-  #source-link > i {
-    color: rgb(94, 106, 210);
-  }
-  
-  #yt-link > i {
-    color: rgb(239, 83, 80);
-  }
-  
-  .meta-link {
-    align-items: center;
-    backdrop-filter: blur(3px);
-    background-color: rgba(255, 255, 255, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 6px;
-    bottom: 10px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-    cursor: pointer;  
-    display: inline-flex;
-    gap: 5px;
-    left: 10px;
-    padding: 10px 20px;
-    position: fixed;
-    text-decoration: none;
-    transition: background-color 400ms, border-color 400ms;
-    z-index: 10000;
-  }
-  
-  .meta-link:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-  }
-  
-  .meta-link > i, .meta-link > span {
-    height: 20px;
-    line-height: 20px;
-  }
-  
-  .meta-link > span {
-    color: white;
-    font-family: "Rubik", sans-serif;
-    font-weight: 500;
-  }
+#source-link > i {
+  color: rgb(94, 106, 210);
+}
+
+#return-link {
+  bottom: 110px;
+}
+
+#return-link > i {
+  color: rgb(94, 106, 210);
+}
+
+#yt-link > i {
+  color: rgb(239, 83, 80);
+}
+
+.meta-link {
+  align-items: center;
+  backdrop-filter: blur(3px);
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  bottom: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  cursor: pointer;  
+  display: inline-flex;
+  gap: 5px;
+  left: 10px;
+  padding: 10px 20px;
+  position: fixed;
+  text-decoration: none;
+  transition: background-color 400ms, border-color 400ms;
+  z-index: 10000;
+}
+
+.meta-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.meta-link > i, .meta-link > span {
+  height: 20px;
+  line-height: 20px;
+}
+
+.meta-link > span {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+}
